# solar2d

./: .gitignore  .gitmodules  AGENTS.md  CONTROLLER_DETECTION_RELIABILITY.md  README.md  WinTimer.diff
.github/ISSUE_TEMPLATE/: app-is-not-building.md
.github/workflows/: build.yml  build_mac.yml  build_test_drive_size.yml  build_test_nintendo.yml  build_windows.yml
librtt/: Rtt_Archive.cpp  Rtt_Archive.h  Rtt_Event.cpp  Rtt_Event.h  Rtt_ExplicitTemplates.cpp  Rtt_GPU.h  Rtt_GPUStream.cpp  Rtt_GPUStream.h  Rtt_HitTestObject.cpp  Rtt_KeyName.cpp  Rtt_KeyName.h  Rtt_Lua.cpp  Rtt_Lua.h  Rtt_LuaAssert.cpp  Rtt_LuaAux.h  Rtt_LuaContext.cpp  Rtt_LuaContext.h  Rtt_LuaCoronaBaseLib.c  Rtt_LuaFrameworks.h  Rtt_LuaLibNative.cpp  Rtt_LuaLibNative.h  Rtt_LuaLibOpenAL.cpp  Rtt_LuaLibSystem.cpp  Rtt_LuaLibSystem.h  Rtt_LuaProxy.cpp  Rtt_LuaProxy.h  Rtt_LuaProxyVTable.cpp  Rtt_LuaProxyVTable.h  Rtt_MPlatform.h  Rtt_MPlatformDevice.h  Rtt_MRuntimeDelegate.h  Rtt_Matrix.cpp  Rtt_Matrix.h  Rtt_PlatformAudioSessionManager.cpp  Rtt_PlatformAudioSessionManager.h  Rtt_PlatformDisplayObject.cpp  Rtt_PlatformDisplayObject.h  Rtt_PlatformOpenALPlayer.cpp  Rtt_PlatformSurface.cpp  Rtt_PlatformSurface.h  (+14 more)
librtt/Core/: Rtt_Assert.c  Rtt_Assert.h  Rtt_Config.h  Rtt_FileSystem.cpp  Rtt_FixedBlockAllocator.cpp  Rtt_FixedMath.c  Rtt_Geometry.h  Rtt_Math.h  Rtt_Real.h  Rtt_Time.c  Rtt_Time.h  Rtt_Traits.h  Rtt_VersionTimestamp.c
librtt/Corona/: CoronaEvent.cpp  CoronaEvent.h  CoronaLua.cpp  CoronaMacros.h  CoronaObjects.cpp  CoronaObjects.h
librtt/Display/: Rtt_BitmapPaint.cpp  Rtt_BitmapPaint.h  Rtt_BitmapPaintAdapter.cpp  Rtt_BufferBitmap.cpp  Rtt_BufferBitmap.h  Rtt_ClosedPath.cpp  Rtt_ClosedPath.h  Rtt_CompositePaint.cpp  Rtt_ContainerObject.cpp  Rtt_ContainerObject.h  Rtt_Display.cpp  Rtt_Display.h  Rtt_DisplayDefaults.cpp  Rtt_DisplayDefaults.h  Rtt_DisplayObject.cpp  Rtt_DisplayObject.h  Rtt_EmbossedTextObject.cpp  Rtt_GradientPaint.cpp  Rtt_GradientPaint.h  Rtt_GroupObject.cpp  Rtt_GroupObject.h  Rtt_ImageFrame.cpp  Rtt_ImageFrame.h  Rtt_ImageSheet.cpp  Rtt_ImageSheet.h  Rtt_ImageSheetPaintAdapter.cpp  Rtt_LineObject.cpp  Rtt_LuaLibDisplay.cpp  Rtt_LuaLibDisplay.h  Rtt_LuaLibGraphics.cpp  Rtt_MDisplayDelegate.h  Rtt_Paint.cpp  Rtt_PaintAdapter.cpp  Rtt_PlatformBitmap.cpp  Rtt_PlatformBitmap.h  Rtt_RectPath.cpp  Rtt_RectPath.h  Rtt_Scene.cpp  Rtt_Scene.h  Rtt_Shader.cpp  (+54 more)
librtt/Input/: Rtt_ControllerTypeClassifier.cpp  Rtt_ControllerTypeClassifier.h  Rtt_GameControllerDB.cpp  Rtt_GameControllerDB.h  Rtt_PlatformInputDevice.cpp  Rtt_PlatformInputDevice.h
librtt/Renderer/: Rtt_CPUResource.h  Rtt_CommandBuffer.h  Rtt_GL.h  Rtt_GLCommandBuffer.cpp  Rtt_GLCommandBuffer.h  Rtt_GLGeometry.cpp  Rtt_GLProgram.cpp  Rtt_GLRenderer.cpp  Rtt_GLTexture.cpp  Rtt_Geometry_Renderer.cpp  Rtt_Geometry_Renderer.h  Rtt_Program.cpp  Rtt_Program.h  Rtt_RenderTypes.cpp  Rtt_RenderTypes.h  Rtt_Renderer.cpp  Rtt_Renderer.h  Rtt_VulkanCommandBuffer.cpp  Rtt_VulkanFrameBufferObject.cpp  Rtt_VulkanProgram.cpp  Rtt_VulkanRenderer.cpp  Rtt_VulkanRenderer.h  Rtt_VulkanTexture.cpp
modules/simulator/: Rtt_LuaLibSimulator.cpp  Rtt_MSimulatorServices.h
platform/android/: Rtt_AndroidAppPackager.cpp  Rtt_AndroidAppPackager.h  build.gradle.kts  build_app.sh  build_cards_docs.sh  build_enterprise_docs.sh  build_plugins.sh  build_server_input.sh  build_template.sh  build_template_cards.sh  create_build_properties.lua  settings.gradle.kts
platform/android/ndk/: AndroidBaseNativeImageDecoder.cpp  AndroidGLView.cpp  AndroidGLView.h  AndroidImageData.cpp  AndroidImageData.h  CMakeLists.txt  Rtt_AndroidBitmap.cpp  Rtt_AndroidBitmap.h  Rtt_AndroidDevice.cpp  Rtt_AndroidDevice.h  Rtt_AndroidInputDevice.cpp  Rtt_AndroidInputDevice.h  Rtt_AndroidPlatform.cpp  Rtt_AndroidPlatform.h  Rtt_AndroidRuntimeDelegate.cpp  Rtt_AndroidRuntimeDelegate.h  Rtt_AndroidScreenSurface.cpp  Rtt_AndroidScreenSurface.h  Rtt_AndroidTextFieldObject.cpp  Rtt_AndroidTextFieldObject.h  Rtt_AndroidWebViewObject.cpp  Rtt_AndroidWebViewObject.h  build.sh  shell.lua
platform/android/ndk/jni/: Android.mk  JavaToNativeBridge.cpp  JavaToNativeBridge.h  JavaToNativeShim.cpp  NativeToJavaBridge.cpp  NativeToJavaBridge.h  com_ansca_corona_JavaToNativeShim.h
platform/apple/: CoreAnimationUtilities.h  CoreAnimationUtilities.m  Rtt_AppleBitmap.h  Rtt_AppleBitmap.mm  Rtt_AppleInputDevice.h  Rtt_AppleInputDevice.mm  Rtt_AppleInputHIDDeviceListener.mm  Rtt_AppleInputMFiDeviceListener.mm  Rtt_AppleKeyServices.h  Rtt_AppleKeyServices.mm  Rtt_ApplePlatform.h  Rtt_ApplePlatform.mm  Rtt_AppleTimer.h  Rtt_AppleTimer.mm
platform/emscripten/: Rtt_EmscriptenPlatform.cpp  Rtt_EmscriptenPlatform.h
platform/iphone/: AppDelegate.h  AppDelegate.mm  AutoLinkModules.m  CoronaAppDelegate.mm  CoronaSystemResourceManager.h  CoronaSystemResourceManager.mm  CoronaViewControllerPrivate.mm  CoronaViewPluginContext.mm  CoronaViewPrivate.h  CoronaViewPrivate.mm  CoronaViewRuntimeDelegate.h  CoronaViewRuntimeDelegate.mm  Info-ipad.plist  Info-universal.plist  Info.plist  Rtt_IPhoneAudioSessionManager.h  Rtt_IPhoneAudioSessionManager.mm  Rtt_IPhoneAudioSessionManagerImplementation.h  Rtt_IPhoneAudioSessionManagerImplementation.mm  Rtt_IPhoneDevice.h  Rtt_IPhoneDevice.mm  Rtt_IPhoneDisplayObject.h  Rtt_IPhoneDisplayObject.mm  Rtt_IPhoneGLVideoTexture.mm  Rtt_IPhoneImageProvider.h  Rtt_IPhoneImageProvider.mm  Rtt_IPhoneInMobiNetwork.mm  Rtt_IPhoneInneractiveNetwork.mm  Rtt_IPhoneMediaProvider.h  Rtt_IPhoneMediaProvider.mm  Rtt_IPhonePlatform.h  Rtt_IPhonePlatform.mm  Rtt_IPhonePlatformBase.h  Rtt_IPhonePlatformBase.mm  Rtt_IPhonePlatformCore.h  Rtt_IPhonePlatformCore.mm  Rtt_IPhoneRuntimeDelegate.h  Rtt_IPhoneScreenSurface.h  Rtt_IPhoneScreenSurface.mm  Rtt_IPhoneText.h  (+17 more)
platform/linux/: CMakeList.txt  CMakeResources.txt  CMakeRsyncLinuxLists.txt  Solar2D.project  Solar2DBuilder.project  Solar2DConsole.project  Solar2DSimulator.project  gh_action.sh  gh_action_flatpak.sh  lua2cpp.mk  setup_dev.sh  shell.lua
platform/mac/: AppBuildController.h  (+68 more)
tools/: activate-solar2d.ps1  template-packager.sh
(+495 files in other folders)
